[project]
authors = [
    {name = "Litestar Maintainers", email = "hello@litestar.dev"},
    {name = "Cody Fincher", email = "cody.fincher@gmail.com"},
    {name = "Janek Nouvertné", email = "provinzkraut@posteo.de"},
    {name = "Jacob Coffee", email = "jacob@z7x.org"},
    {name = "Peter Schutt", email = "peter.github@proton.me"},
    {name = "Visakh Unnikrishnan", email = "guacs.guacs@gmail.com"},
]
maintainers = [
    {name = "Litestar Maintainers", email = "hello@litestar.dev"},
    {name = "Cody Fincher", email = "cody.fincher@gmail.com"},
    {name = "Janek Nouvertné", email = "provinzkraut@posteo.de"},
    {name = "Jacob Coffee", email = "jacob@z7x.org"},
    {name = "Peter Schutt", email = "peter.github@proton.me"},
    {name = "Visakh Unnikrishnan", email = "guacs.guacs@gmail.com"},
]
keywords = [
    "api",
    "rest",
    "asgi",
    "litestar",
    "template",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
name = "litestar-hello-world"
version = "0.1.0"
description = "litestar-hello-world is a minimal implementation of a Litestar application."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<4.0"
dependencies = [
    "litestar[standard]>=2.4.1",
]

[project.urls]
"Issue Tracker" = "https://github.com/litestar-org/litestar-hello-world/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc"
Changelog = "https://github.com/litestar-org/litestar-hello-world/releases/"
Twitter = "https://twitter.com/LitestarAPI"
Reddit = "https://www.reddit.com/r/litestarapi"
Discord = "https://discord.gg/litestar-919193495116337154"
Blog = "https://blog.litestar.dev"
homepage = "https://litestar.dev/"
repository = "https://github.com/litestar-org/litestar-hello-world"
documentation = "https://docs.litestar.dev/"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
app = "litestar.__main__:run_cli"

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest"
ci = {composite = ["lint", "test"]}

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.1.6",
    "codespell>=2.2.6",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "shellcheck-py>=0.9.0.6",
    "pyright>=1.1.337",
    "sourcery>=1.14.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.codespell]
ignore-words-list = "selectin"
skip = 'pdm.lock'

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
]

[tool.pytest.ini_options]
# addopts = "--ignore=examples"
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]

[tool.slotscheck]
strict-imports = false

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true

[tool.ruff]
select = ["ALL"]
ignore = [
    "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
    "B010", # flake8-bugbear - do not call setattr with a constant attribute value
    "D100", # pydocstyle - missing docstring in public module
    "D101", # pydocstyle - missing docstring in public class
    "D102", # pydocstyle - missing docstring in public method
    "D103", # pydocstyle - missing docstring in public function
    "D104", # pydocstyle - missing docstring in public package
    "D105", # pydocstyle - missing docstring in magic method
    "D106", # pydocstyle - missing docstring in public nested class
    "D107", # pydocstyle - missing docstring in __init__
    "D202", # pydocstyle - no blank lines allowed after function docstring
    "D205", # pydocstyle - 1 blank line required between summary line and description
    "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
    "E501", # pycodestyle line too long, handled by black
    "PLW2901"  # pylint - for loop variable overwritten by assignment target
]
line-length = 120
src = ["app.py", "tests",]
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
]

[tool.ruff.isort]
known-first-party = ["litestar", "tests"]

[tool.ruff.per-file-ignores]
"tests/**/*.*" = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C901",
    "D",
    "DTZ",
    "EM",
    "FBT",
    "G",
    "N",
    "PGH",
    "PIE",
    "PLR",
    "PLW",
    "PTH",
    "RSE",
    "S",
    "S101",
    "SIM",
    "TCH",
    "TRY",
]
